# Concrete_Test_Results

./: .gitignore  Compressive_Strength_Summary.py  Extract_from_PDF.ipynb  README.md  Summary_Generator.ipynb  example_copy.xlsx  pyproject.toml  requirements.txt
.github/workflows/: test.yml
conc_test_report/: __init__.py  c_kontur.py  c_mcelhanney.py  company.py  definitions.py  parser.py  stru_checks.py
tests/: test_stru_checks.py
util/: concrete_test_class.py  excel_class.py  html_css.py  pdf_class.py  streamlit_configs.py
