[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "conc_test_report"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "pandas",
    "pdfplumber>=0.7.6",
    "ipykernel",
    "tqdm",
    "openpyxl",
    "fpdf"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Home = "https://github.com/rpakishore/Concrete_Test_Results"
